--- a/head.html
+++ b/head.html
@@ -12,7 +12,7 @@
     <header id="header" class="navbar navbar-fixed-top">
     <!-- 导航条 -->
     <div class="title" >
-        <a onclick="javascript:window.location.href='index1.html'" style="cursor:pointer"><h4>J.O DESIGN STUDIO</h4></a>
+        <a onclick="javascript:window.location.href='index.html'" style="cursor:pointer"><h4>J.O DESIGN STUDIO</h4></a>
     </div>
     <div class="navbar navbar-default">
             <div class="container">
